test/riscv/error/compiler/test_riscv_error_compiler_006.out


[E06] Error: Incorrect instruction syntax
    ╭─[assembly:11:7]
    │
 11 │    li t0, 0xhello
    │       ─────┬─────  
    │            ╰─────── Incorrect syntax
    │ 
    │ Note: Allowed formats:
    │       li rd,val
────╯

The syntax `li rd,val` failed with the following reason:
Error: found "xhello" but expected one of "\n", end of input
    ╭─[assembly:11:12]
    │
 11 │    li t0, 0xhello
    │            ───┬──  
    │               ╰──── Unexpected input
    │               │    
    │               ╰──── while parsing this expression
────╯

Not executed
keyboard[0x0]:''; display[0x0]:''; 

